# code-doc-agent

./: .gitignore  README.md  pyproject.toml  quickstart.sh
code_doc_agent/: app.py  cleanup.py  main.py
code_doc_agent/agent/: documentation_workflow.py  guardrails.py
code_doc_agent/agent/crews/: code_explorer.py  documentation_crew.py
code_doc_agent/agent/prompting_templates/: prompt.txt  response.txt  system.txt
code_doc_agent/utils/: __init__.py  config.py  schemas.py
